--- a/de/LC_MESSAGES/ckan.po
+++ b/de/LC_MESSAGES/ckan.po
@@ -1793,7 +1793,7 @@ msgstr "Benutzer %s ist nicht berechtigt, Ressource %s zu lesen"
 
 #: ckan/logic/auth/get.py:216
 msgid "You must be logged in to access your dashboard."
-msgstr "Du musst angemeldet sein, um die Übersichtsseite sehen zu können."
+msgstr "Sie müssen angemeldet sein, um die Übersichtsseite sehen zu können."
 
 #: ckan/logic/auth/update.py:33
 #, python-format
@@ -2215,7 +2215,7 @@ msgstr[1] "Übersicht (%(num)d neue Einträge)"
 
 #: ckan/templates/header.html:33 ckan/templates/user/dashboard.html:16
 msgid "Edit settings"
-msgstr "Bearbeite Einstellungen"
+msgstr "Einstellungen bearbeiten"
 
 #: ckan/templates/header.html:40 ckan/templates_legacy/user/layout.html:14
 msgid "Log out"
@@ -2292,7 +2292,7 @@ msgstr "Konfiguration"
 #: ckan/templates/admin/config.html:11
 #: ckan/templates/admin/confirm_reset.html:7
 msgid "Are you sure you want to reset the config?"
-msgstr "Bist du sicher, dass du die Konfiguration zurücksetzen willst?"
+msgstr "Sind sie sicher, dass sie die Konfiguration zurücksetzen wollen?"
 
 #: ckan/templates/admin/config.html:12
 msgid "Reset"
@@ -2329,7 +2329,7 @@ msgstr " <p><strong>Seitenüberschrift:</strong> Dieses ist der Seitentitel dies
 #: ckan/templates/admin/confirm_reset.html:3
 #: ckan/templates/admin/confirm_reset.html:10
 msgid "Confirm Reset"
-msgstr "Bestätige das Zurücksetzen"
+msgstr "Zurücksetzen bestätigen"
 
 #: ckan/templates/admin/index.html:15
 msgid "What are sysadmins?"
@@ -2344,7 +2344,7 @@ msgstr " <p>Ein System-Administrator hat voll Kontrolle über eine CKAN-Instanz.
 
 #: ckan/templates/admin/index.html:24
 msgid "Read the documentation"
-msgstr "Lies die Dokumentation"
+msgstr "Lesen sie die Dokumentation"
 
 #: ckan/templates/ajax_snippets/api_info.html:19
 msgid "CKAN Data API"
@@ -2422,7 +2422,7 @@ msgstr "Diese Ressource kann momentan nicht in der Vorschau angezeigt werden."
 
 #: ckan/templates/dataviewer/snippets/data_preview.html:11
 msgid "Click here for more information."
-msgstr "Klick hier für mehr Informationen"
+msgstr "Klicken sie hier für mehr Informationen"
 
 #: ckan/templates/dataviewer/snippets/data_preview.html:18
 msgid "Download resource"
@@ -2430,7 +2430,7 @@ msgstr "Ressource herunterladen"
 
 #: ckan/templates/dataviewer/snippets/data_preview.html:23
 msgid "Your browser does not support iframes."
-msgstr "Dein Browser unterstützt keine Iframes."
+msgstr "Ihr Browser unterstützt keine Iframes."
 
 #: ckan/templates/dataviewer/snippets/no_preview.html:3
 msgid "No preview available."
@@ -2543,7 +2543,7 @@ msgstr "Administratoren"
 #: ckan/templates/group/base_form_page.html:7
 #: ckan/templates_legacy/group/layout.html:32
 msgid "Add a Group"
-msgstr "Füge eine Gruppe hinzu"
+msgstr "Fügen sie eine Gruppe hinzu"
 
 #: ckan/templates/group/base_form_page.html:11
 msgid "Group Form"
@@ -2564,16 +2564,16 @@ msgstr "Gruppen-Formular"
 #: ckan/templates/related/confirm_delete.html:3
 #: ckan/templates/related/confirm_delete.html:15
 msgid "Confirm Delete"
-msgstr "Bestätige das Löschen"
+msgstr "Bestätigen sie das Löschen"
 
 #: ckan/templates/group/confirm_delete.html:11
 msgid "Are you sure you want to delete group - {name}?"
-msgstr "Bist du sicher, dass du die Gruppe {name} löschen willst?"
+msgstr "Sind sie sicher, dass sie die Gruppe {name} löschen wollen?"
 
 #: ckan/templates/group/confirm_delete_member.html:11
 #: ckan/templates/organization/confirm_delete_member.html:11
 msgid "Are you sure you want to delete member - {name}?"
-msgstr "Bist du sicher, dass du das Mitglied {name} löschen willst?"
+msgstr "Sind sie sicher, dass sie das Mitglied {name} löschen wollen?"
 
 #: ckan/templates/group/edit.html:7 ckan/templates/group/edit_base.html:3
 #: ckan/templates/group/edit_base.html:11
@@ -2589,7 +2589,7 @@ msgstr "Bearbeiten"
 
 #: ckan/templates/group/edit.html:12
 msgid "Edit Group"
-msgstr "Bearbeite Gruppe"
+msgstr "Gruppe bearbeiten"
 
 #: ckan/templates/group/edit_base.html:16
 #: ckan/templates/organization/edit_base.html:17
@@ -2647,7 +2647,7 @@ msgstr "Es gibt momentan keine Gruppen für diese Seite"
 #: ckan/templates/group/index.html:31
 #: ckan/templates/organization/index.html:31
 msgid "How about creating one?"
-msgstr "Wie wäre es, wenn du eine erstellst?"
+msgstr "Wie wäre es, wenn sie eine erstellen?"
 
 #: ckan/templates/group/member_new.html:8
 #: ckan/templates/organization/member_new.html:10
@@ -2717,7 +2717,7 @@ msgstr "Benutzername"
 #: ckan/templates/organization/member_new.html:55
 #: ckan/templates/organization/members.html:30
 msgid "Are you sure you want to delete this member?"
-msgstr "Bist du sicher, dass du dieses Mitglied löschen willst?"
+msgstr "Sind sie sicher, dass sie dieses Mitglied löschen wollen?"
 
 #: ckan/templates/group/member_new.html:65
 #: ckan/templates/group/members.html:32
@@ -2768,11 +2768,11 @@ msgstr " <p><strong>Admin:</strong> Kann Gruppen-Informationen und Organisations
 #: ckan/templates/group/new.html:3 ckan/templates/group/new.html:5
 #: ckan/templates/group/new.html:7
 msgid "Create a Group"
-msgstr "Leg eine Gruppe an"
+msgstr "Legen sie eine Gruppe an"
 
 #: ckan/templates/group/new_group_form.html:17
 msgid "Update Group"
-msgstr "Aktualisiere Gruppe"
+msgstr "Gruppe aktualisieren"
 
 #: ckan/templates/group/new_group_form.html:19
 msgid "Create Group"
@@ -2823,7 +2823,7 @@ msgstr "Ein paar Informationen zu meiner Gruppe..."
 
 #: ckan/templates/group/snippets/group_form.html:80
 msgid "Are you sure you want to delete this Group?"
-msgstr "Bist du sicher, dass du diese Gruppe löschen willst?"
+msgstr "Sind sie sicher, dass sie diese Gruppe löschen wollen?"
 
 #: ckan/templates/group/snippets/group_form.html:85
 msgid "Save Group"
@@ -2966,11 +2966,11 @@ msgstr "Dies ist ein hervorgehobener Abschnitt"
 
 #: ckan/templates/home/snippets/search.html:2
 msgid "eg. Gold Prices"
-msgstr "z.B. Goldpreise"
+msgstr " "
 
 #: ckan/templates/home/snippets/search.html:6
 msgid "Search Your Data"
-msgstr "Durchsuche deine Daten"
+msgstr "Durchsuchen der Daten"
 
 #: ckan/templates/home/snippets/search.html:11
 #: ckan/templates/snippets/simple_search.html:5
@@ -3030,7 +3030,7 @@ msgstr "Zugehörige Elemente"
 msgid ""
 "You can use <a href=\"http://daringfireball.net/projects/markdown/syntax\" "
 "target=\"_blank\">Markdown formatting</a> here"
-msgstr "Du kannst hier <a href=\"http://daringfireball.net/projects/markdown/syntax\" target=\"_blank\">Markdown-Formatierung</a> nutzen"
+msgstr "Sie können hier <a href=\"http://daringfireball.net/projects/markdown/syntax\" target=\"_blank\">Markdown-Formatierung</a> nutzen"
 
 #: ckan/templates/macros/form.html:264
 msgid "This field is required"
@@ -3093,7 +3093,7 @@ msgstr "gefunden für \"{query}\""
 
 #: ckan/templates/organization/bulk_process.html:18
 msgid "Sorry no datasets found for \"{query}\""
-msgstr "Sorry, keine Datensätze gefunden für \"{query}\""
+msgstr "Keine Datensätze gefunden für \"{query}\""
 
 #: ckan/templates/organization/bulk_process.html:37
 msgid "Make public"
@@ -3159,7 +3159,7 @@ msgstr "Zuletzt geändert"
 
 #: ckan/templates/organization/confirm_delete.html:11
 msgid "Are you sure you want to delete organization - {name}?"
-msgstr "Bist du sicher, dass du die Organisation {name} löschen willst?"
+msgstr "Sind sie sicher, dass sie die Organisation {name} löschen wollen?"
 
 #: ckan/templates/organization/edit.html:6
 #: ckan/templates/organization/snippets/info.html:13
@@ -3178,7 +3178,7 @@ msgstr "Organisationen suchen..."
 
 #: ckan/templates/organization/index.html:29
 msgid "There are currently no organizations for this site"
-msgstr "Es gibt moment keine Organisationen für diese Seite"
+msgstr "Es gibt aktuell keine Organisationen für diese Seite"
 
 #: ckan/templates/organization/member_new.html:58
 msgid "Update Member"
@@ -3287,11 +3287,11 @@ msgstr "Ein CKAN Datensatz ist eine Menge von Daten-Ressourcen (z.B. Dateien) mi
 
 #: ckan/templates/package/confirm_delete.html:11
 msgid "Are you sure you want to delete dataset - {name}?"
-msgstr "Bist du sicher, dass du den Datensatz {name} löschen willst?"
+msgstr "Sind sie sicher, dass sie den Datensatz {name} löschen wollen?"
 
 #: ckan/templates/package/confirm_delete_resource.html:11
 msgid "Are you sure you want to delete resource - {name}?"
-msgstr "Bist du sicher, dass du die Ressource {name} löschen willst?"
+msgstr "Sind sie sicher, dass sie die Ressource {name} löschen wollen?"
 
 #: ckan/templates/package/edit_base.html:14
 msgid "View dataset"
@@ -3319,11 +3319,11 @@ msgstr "Datensatz aktualisieren"
 
 #: ckan/templates/package/new_package_metadata.html:3
 msgid "Add metadata to the dataset"
-msgstr "Füge Metadaten zu diesem Datensatz hinzu"
+msgstr "Fügen sie Metadaten zu diesem Datensatz hinzu"
 
 #: ckan/templates/package/new_resource.html:5
 msgid "Add data to the dataset"
-msgstr "Füge Daten zu diesem Datensatz hinzu"
+msgstr "Fügen sie Daten zu diesem Datensatz hinzu"
 
 #: ckan/templates/package/new_resource.html:10
 #: ckan/templates/package/new_resource_not_draft.html:7
@@ -3362,7 +3362,7 @@ msgstr "Keine verwandten Elemente"
 
 #: ckan/templates/package/related_list.html:18
 msgid "Add Related Item"
-msgstr "Füge verwandtes Element hinzu"
+msgstr "Fügen sie verwandtes Element hinzu"
 
 #: ckan/templates/package/resource_data.html:12
 msgid "Upload to DataStore"
